# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff.yml  tests.yml
gendiff/: __init__.py  cli.py  generate_diff.py  generator.py  parser.py
gendiff/formats/: formatter.py  json.py  plain.py  stylish.py  validators.py
gendiff/scripts/: generator_script.py
gendiff/utils/: cli.py  constants.py  diff.py  parser.py
tests/: test_generator.py
tests/fixtures/: file1.yaml  file2.yaml  json_view_result.txt  yaml_result.txt
